@startuml RPGEngine Database

title RPGEngine - Modèle de données SQLite

hide methods
hide stereotypes

skinparam linetype ortho

entity "trigger" as trigger {
    * id : INTEGER <<PK>>
    --
    name : TEXT
    type : TEXT
    target_id : TEXT
    enabled : INTEGER
}

entity "condition" as condition {
    * id : INTEGER <<PK>>
    --
    trigger_id : INTEGER <<FK>>
    provider : TEXT
    expression : TEXT
}

entity "action" as action {
    * id : INTEGER <<PK>>
    --
    trigger_id : INTEGER <<FK>>
    provider : TEXT
    expression : TEXT
    position : INTEGER
}

entity "player_variable" as player_variable {
    * id : INTEGER <<PK>>
    --
    player_uuid : TEXT
    key : TEXT
    value : TEXT
}

entity "dialogue" as dialogue {
    * id : INTEGER <<PK>>
    --
    key : TEXT <<UQ>>
    name : TEXT
    start_node_id : INTEGER <<FK>>
}

entity "dialogue_node" as dialogue_node {
    * id : INTEGER <<PK>>
    --
    dialogue_id : INTEGER <<FK>>
    key : TEXT
    text : TEXT
}

entity "dialogue_transition" as dialogue_transition {
    * id : INTEGER <<PK>>
    --
    dialogue_id : INTEGER <<FK>>
    source_node_id : INTEGER <<FK>>
    target_node_id : INTEGER <<FK, nullable>>
    type : TEXT
    label : TEXT <<nullable>>
    position : INTEGER
}

entity "dialogue_transition_condition" as transition_condition {
    * id : INTEGER <<PK>>
    --
    transition_id : INTEGER <<FK>>
    provider : TEXT
    expression : TEXT
}

entity "dialogue_transition_action" as transition_action {
    * id : INTEGER <<PK>>
    --
    transition_id : INTEGER <<FK>>
    provider : TEXT
    expression : TEXT
    position : INTEGER
}

entity "schema_version" as schema_version {
    version : INTEGER
}

trigger ||--o{ condition : possède
trigger ||--o{ action : possède

dialogue ||--o{ dialogue_node : contient
dialogue ||--o{ dialogue_transition : contient

dialogue_node ||--o{ dialogue_transition : source
dialogue_node |o--o{ dialogue_transition : cible

dialogue_transition ||--o{ transition_condition : possède
dialogue_transition ||--o{ transition_action : possède

dialogue |o--o| dialogue_node : start_node

note right of dialogue_transition
  AUTO
    target obligatoire
    label absent

  CHOICE
    target obligatoire
    label obligatoire

  END
    target absent
    label absent
end note

note right of dialogue
  start_node_id peut être NULL
  pendant l'édition.

  Un dialogue exécutable doit
  obligatoirement définir son
  node de départ.
end note

note bottom of player_variable
  UNIQUE(player_uuid, key)
end note

@enduml